--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,18 @@
         <postgresql.version>42.5.0</postgresql.version>
         <javax.servelt.version>4.0.1</javax.servelt.version>
         <jstl.version>1.2</jstl.version>
+        <hibernate.version>6.1.5.Final</hibernate.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
+        </dependency>
+       <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
